# Franka_dual

./: .gitmodules  README.md
src/dual_arm_motion_planner/: package.xml  setup.cfg  setup.py
src/dual_arm_motion_planner/dual_arm_motion_planner/: dual_arm_motion_planner_collision.py  dual_arm_motion_planner_ee.py  dual_arm_motion_planner_q.py  dual_arm_motion_planner_tcp.py
src/dual_arm_motion_planner/launch/: cartesian_collision_task.launch.py  ee_target_task.launch.py  join_target_task.launch.py  tcp_target_task.launch.py
src/franka_dual_arm_joint_position_controller/: CMakeLists.txt  package.xml  plugin.xml
src/franka_dual_arm_joint_position_controller/include/franka_dual_arm_joint_position_controller/: dual_arm_impedance_controller.hpp  dual_arm_position_controller.hpp  dual_arm_traj_controller.hpp  dual_arm_vel_controller.hpp
src/franka_dual_arm_joint_position_controller/src/: dual_arm_impedance_controller.cpp  dual_arm_position_controller.cpp  dual_arm_traj_controller.cpp  dual_arm_vel_controller.cpp
src/franka_dual_arm_sine_wave/: package.xml  setup.cfg  setup.py
src/franka_dual_arm_sine_wave/franka_dual_arm_sine_wave/: sine_wave_joint_publisher.py
src/franka_dual_arm_sine_wave/launch/: sin_wave_task.launch.py
src/franka_dual_msgs/: CMakeLists.txt  package.xml
src/franka_dual_msgs/srv/: DualJointAngle.srv  DualTraj.srv  EEPose.srv
src/panda_dual_basic/: CMakeLists.txt  package.xml  setup.py
src/panda_dual_basic/config/: controllers.yaml  dual_arm_controllers.yaml  dual_fr3.urdf  dual_fr3_co.urdf  fr3_dual.urdf.xacro  fr3_left.urdf.xacro  fr3_right.urdf.xacro  franka_dual_gz.config.yaml  franka_dual_gz_task_cartesian.config.yaml  franka_dual_gz_task_wave.config.yaml  franka_dual_no_gz.config.yaml  franka_gazebo_controllers.yaml  left copy.urdf  left.urdf  left_no_gz.urdf  right.urdf  right_no_gz.urdf  visualize_franka.rviz  visualize_franka_dual_no_gz.rviz
src/panda_dual_basic/launch/: dual_franka_gz.launch.py  franka_gz.launch.py  franka_no_gz.launch.py  multi_franka_no_gz.launch.py
