<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_dual_arm_sine_wave</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="haoleitong24@gmail.com">haolei</maintainer>
  <license>TODO: License declaration</license>
  <exec_depend>franka_msgs</exec_depend>
  <exec_depend>franka_dual_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
